[metadata]
name = console-ui
version = 1.0.0
description = A simple console UI library inspired by WinForms.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/okejsew/Console-UI
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    windows-curses
